# Quantum-Chat

./: .gitignore  README.md  chat.py  pyproject.toml
tests/: test_validation_and_database.py
